2009-02-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  Added unit test for "Bug 479983 - No C# completion for
	  object initializers".

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* UnitTests.csproj: Flush.

2009-02-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/SyntaxHighlightingTests.cs: Added some
	  highlighting tests.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added more unit tests do document resolver issues.

2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* TestBase.cs: Use a local directory for the add-in registry.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added tests for implicit generic method parameter.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added test for explicit generic method parameters.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	  fixed typo in unit test.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added test for inner type bug.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added test for inner inner type access.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs:
	  Added test for AttributeArguments expression context.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: MD broke the makefile; fix it.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Xml.StateEngine/TestParser.cs:
	* MonoDevelop.Xml.StateEngine/ParsingTests.cs:
	* MonoDevelop.Xml.StateEngine/HtmlParsingTests.cs: